--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <html>
-<title>HTML calculator</title>
-<body>
-this is the body of html calculator
-</body>
+   <head></head>
+   <body>
+      <form name=”calculator”>
+         <table>
+            
+            <tr>
+              <td>
+                 <input type="text" name="display" id="display" disabled>
+              </td>
+           </tr>
+           <tr>
+              <td><input type=”button” name=”one” value=”1" onclick=”calculator.display.value += ‘1’”></td>
+              <td><input type=”button” name=”two” value=”2" onclick=”calculator.display.value += ‘2’”></td>
+              <td><input type=”button” name=”three” value=”3" onclick=”calculator.display.value += ‘3’”></td>
+              <td><input type=”button” class=”operator” name=”plus” value=”+” onclick=”calculator.display.value += ‘+’”></td>
+           </tr>
+        </table>
+      </form>
+   </body>
 </html>
